app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: default
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
