app2/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress
  http:
    - match:
        - uri:
            prefix: /app2
      rewrite:
        uri: /
      route:
        - destination:
            host: app2.default.svc.cluster.local
            port:
              number: 80
